# agent

./: README.md  config.yaml  pyproject.toml
src/llm/: __init__.py  model.py  ollama_generator.py  service.py
src/rag/: __init__.py  model.py
twitter/: main.py
twitter/bot/: poster_bot.py
