[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "0xAmadeusAI",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "ollama",
    "pydantic",
    "twikit",
]
packages = [
    { include = "twitter" },
    { include = "src" },
]

[tool.poetry.scripts]
twitter = "twitter.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"